# starlink-scanner

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.go  Dockerfile.python  Makefile  README.md  athena.toml  docker-compose.yml  go.mod  go.sum  pyproject.toml  requirements.txt  rf_listener.py
.athena/: Makefile.inc  bootstrap.py  fetch_wheel.py
.github/workflows/: athena.yml
.scratch/mobile-rca/: PRD.md
.scratch/mobile-rca/issues/: 01-collect-mobility-telemetry.md  02-position-aware-predictive-mos.md  03-heading-relative-obstruction-model.md  04-mobile-environment-signals.md
cmd/e2e/: main.go
cmd/pp-starlink/: collector.go  config.go  location_source.go  main.go  serve.go
docs/agents/: domain.md
internal/analysis/: classify.go  classify_test.go
internal/db/: db.go  query_adapter.go
internal/maintenance/: maintenance.go
internal/orbit/: orbit.go
internal/ping/: ping.go
internal/retry/: retry.go
internal/starlink/: client.go  source.go
pp_starlink/: __init__.py
pp_starlink/cli/: main.py
pp_starlink/core/: __init__.py  models.py
pp_starlink/incidents/: __init__.py  detector.py
pp_starlink/rca/: __init__.py  engine.py
pp_starlink/reports/: __init__.py  formatter.py
pp_starlink/signals/: __init__.py  base.py  dish_health.py  dish_reboot.py  dish_state.py  load.py  network_local.py  network_public.py  network_routing.py  obstruction.py  registry.py  rf_environment.py  rtc.py  weather_daily.py  weather_hourly.py
pp_starlink/storage/: __init__.py  writer.py
pp_starlink/telemetry/: __init__.py  reader.py
proto/: device.proto
proto/device/: device.pb.go  device_grpc.pb.go
schema/: dish_schema.txt
web/: index.html  package.json  tailwind.config.ts  vite.config.ts
web/src/: App.tsx  index.css
(+83 files in other folders)
