[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pp-starlink-rca"
version = "0.1.0"
description = "Root-cause analysis tool for Starlink MOS drops"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "mypy>=1.5",
]
# Not a real pip extra -- .athena/fetch_wheel.py regex-reads this line as the
# single source of truth for which athena wheel to download from GitHub
# Releases. Version must match athena.lock's provenance.athena_version and
# .github/workflows/athena.yml's pinned tag, or athena's own version-drift
# check fails. Kept out of `dev` so `pip install -e ".[dev]"` never tries to
# resolve this private git URL.
athena = [
    "metrostar-athena @ git+https://github.com/MetroStar/athena.git@v4.3.1",
]

[project.scripts]
pp-starlink = "pp_starlink.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pp_starlink*"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
